--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,3 +10,7 @@ jobs:
     
     steps:
       - run: echo "Hello World"
+      - uses: actions/checkout@v3.5.3
+      - run: ls -l
+      
+      
