--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - run: echo "Hello World"
+      - run: echo "Hello World" 
+      - run: ls -l
       - uses: actions/checkout@v3.5.3
       - run: ls -l
       
