--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: CI
+ name: CI
 
 on:
   push:
@@ -9,17 +9,17 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+ jobs:
   build:
+    name: "Build and Test"
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
-    
+      pull-requests: write      
 
-    steps:
+     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 18x
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
@@ -30,25 +30,33 @@ jobs:
     - run: npm run test
     - uses: davelosert/vitest-coverage-report-action@v2
 
-
+  package-and-publish:
     name: 🐳 Package & Publish
     runs-on: ubuntu-latest
-    permissions:
+    needs: 
+      - build
+
+     permissions:
       contents: read
       packages: write
-    
+
+    outputs:
+      container: ${{ steps.meta.outputs.tags }}
+
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Sign in to GitHub Container Registry
+       - name: Sign in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
+
+ 
 
       - name: Generate Docker Metadata
         id: meta
@@ -60,6 +68,8 @@ jobs:
             type=ref,event=pr
             type=sha,event=branch,prefix=,suffix=,format=short
 
+ 
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
@@ -68,3 +78,39 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  staging:
+        name: Deploy to Staging
+        needs: [package-and-publish]
+        runs-on: ubuntu-latest
+        ## Only deploy after merges to the main branch, not on every PR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        permissions:
+          contents: read
+        environment:
+          name: staging
+          url: "${{ steps.deploy.outputs.url }}"
+
+ 
+
+        steps:
+          - uses: actions/checkout@v2
+
+ 
+
+          - name: Log in to Azure using OIDC
+            uses: azure/login@v1
+            with:
+              creds: '{"clientId":"${{ secrets.AZ_CLIENT_ID }}","clientSecret":"${{ secrets.AZ_SECRET }}","subscriptionId":"${{ secrets.AZ_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZ_TENANT_ID }}"}'
+
+ 
+
+          - name: Deploy resources
+            uses: azure/arm-deploy@v1
+            id: deploy
+            with:
+              scope: subscription
+              region: westeurope
+              deploymentName: ${{ vars.APP_NAME }}-deployment
+              template: ./infra/main.bicep
+              parameters: "containerImage=${{ needs.package-and-publish.outputs.container }} actor=${{ github.actor }} appName=aw-${{ vars.APP_NAME }} repository=${{ github.repository }}"
